--- a/style.css
+++ b/style.css
@@ -3,42 +3,194 @@ body{
 }
 
 /* ============ Start of css for PAGE1 ============== */
-.container{
-	width:100%;
-}
-.page1{
-	background-color: #F3EED9;
-	min-height:  660px ;
-	display: flex;
-	justify-content: center;
-  	align-items: center;
-}
-.homepage{
-		width: 50%;
-	text-align: center;
-}
-.homepage > p{
-	font-family: 'Padauk', sans-serif;
-	font-size: 18px;
-	margin: 0px;
-}
-.homepage > h1{
-	font-family: 'Playfair Display', serif;
-	font-size: 60px;
-	color: #824936;
-	margin: 0px;
-}
+	
+	.container{
+		width:100%;
+	}
+	.page1{
+		background-color: #F3EED9;
+		min-height:  660px ;
+		display: flex;
+		justify-content: center;
+	  	align-items: center;
+	}
+	.homepage{
+			width: 50%;
+		text-align: center;
+	}
+	.homepage > p{
+		font-family: 'Padauk', sans-serif;
+		font-size: 18px;
+		margin: 0px;
+	}
+	.homepage > h1{
+		font-family: 'Playfair Display', serif;
+		font-size: 60px;
+		color: #824936;
+		margin: 0px;
+	}
+
 /* ============ End of css for PAGE1 ============== */
+
+
 
 /* ============ Start of css for PAGE2 ============== */
 
+	.page2{
+		margin:5% auto;
+	}
+
+	.HEADING__PAGE2 > h2{
+		text-align: center;
+		font-size: 36px;
+		font-family: 'Playfair Display', serif;
+		color: #824936;
+	}
+
+	.PARA__PAGE2{
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: top;
+		font-size: 21px;
+		font-family: 'Roboto Slab', serif;
+	}
+	.PARA1__PAGE2{
+		width: 35%;
+	}
+
+	.PARA2__PAGE2{
+		width: 35%;
+		padding-left: 5%;
+	}
+
+/* ============ End of css for PAGE2 ============== */
 
 
-@media (max-width: 450px) {
-	.homepage >h1{
-		font-size: 45px;
+/* ============ Start of css for PAGE3 ============== */
+	
+	.page3{
+		background-color:#222C2A;
+		padding: 5% 10%;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		color: rgba(255,255,255, 0.7);
 	}
-	.homepage >p{
-		font-size: 13px;
+	.content{
+		width: 50%;
 	}
-}
+	.content > h1{
+		font-size: 36px;
+		font-family: 'Playfair Display', serif;
+	}
+	.content>p{
+		font-size: 21px;
+		font-family: 'Roboto Slab', serif;
+	}
+	.img{
+		width: 40%;
+	}
+	img{
+		width: 90%;
+	}
+
+/* ============ End of css for PAGE3 ============== */
+
+/* ============ Start of css for PAGE4 ============== */
+	
+	.page4{
+			background-color:#824936;
+			padding: 5% 10%;
+			display: flex;
+			flex-direction: row-reverse;
+			justify-content: space-between;
+			color: rgba(255,255,255, 0.7);
+		}
+		.content{
+			width: 50%;
+		}
+		.content > h1{
+			font-size: 36px;
+			font-family: 'Playfair Display', serif;
+		}
+		.content>p{
+			font-size: 21px;
+			font-family: 'Roboto Slab', serif;
+		}
+		.img{
+			width: 40%;
+		}
+		img{
+			width: 90%;
+		}
+
+/* ============ End of css for PAGE4 ============== */
+
+
+/* ============ Start of MediaQuery ============== */
+
+	@media (max-width: 450px) {
+
+/* ======= For Page1 ======= */
+
+		.homepage >h1{
+			font-size: 45px;
+		}
+		.homepage >p{
+			font-size: 13px;
+		}
+
+/* ======= For Page2 ======= */
+
+		.HEADING__PAGE2 > h2{
+			font-size: 35px;
+		}
+		.PARA__PAGE2{
+			font-size: 15px;
+		}
+
+/* ======= For Page3 ====== */
+
+		.page3{
+			display: block;
+			padding-right: 0;
+		}
+		.content{
+			width: 90%;
+			text-align: center;
+		}
+		.content>h1{
+			font-size: 25px;
+		}
+		.content>p{
+			font-size: 15px;
+		}
+		.img{
+		width: 100%;
+	}
+
+/* ======= For Page4 ======= */
+
+	.page4{
+			display: block;
+			padding-right: 0;
+		}
+		.content{
+			width: 90%;
+			text-align: center;
+		}
+		.content>h1{
+			font-size: 25px;
+		}
+		.content>p{
+			font-size: 15px;
+		}
+		.img{
+		width: 100%;
+	}
+
+
+	}
+
+/* ============ End of MediaQuery ============== */
